--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
 <!-- Write your code here! -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Introduction to the DOM Lab</title>
+  </head>
+  <body>
+    <h1>My HTML adventure</h1>
+    <p>
+        We're writing 
+        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">HTML</a> <a href="https://en.wikipedia.org/wiki/Markup">markup</a> to display in our <strong>browser</strong>. We're basically telling computers what to do. <em>Neat!</em>
+    </p>
+    <table>
+        <thead>
+            <tr>
+                <th>Element name</th>
+                <th>Display Value</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>h1</td>
+                <td>block</tr>
+            </tr>
+            <tr>
+                <td>p</td>
+                <td>block</td>
+            </tr>
+            <tr>
+                <td>strong</td>
+                <td>inline</td>
+            </tr>
+            <tr>
+                <td>em</td>
+                <td>inline</td>
+            </tr>
+        </tbody>
+    </table>
+    <!--All our work for this lesson will go here-->
+  </body>
+</html>
